# geopycli

./: .gitignore  MDOT_MCS_FWEP.geojson  MDOT_MCS_FWH_H3.geojson  MDOT_MCS_FWH_LINE.geojson  MDOT_MCS_FWH_PTS.geojson  PendletonRoutes0.geojson  README.md  h3Tools.py  main.py  map.html  map.py  setup.cfg  temp.html  villagesSlope.json
GeopyCLI/: geopycliFunctions.py  main.py  map.py
GeopyCLI.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
