[metadata]
name = GeopyCLI
version = 0.0.1

[options.entry_points]
console_scripts =
    GeopyCLI = GeopyCLI.main:app

[options]
packages = GeopyCLI
install_requires=
    attrs==22.2.0
    bleach==6.0.0
    branca==0.6.0
    certifi==2022.12.7
    cffi==1.15.1
    charset-normalizer==3.1.0
    click==8.1.3
    click-plugins==1.1.1
    cligj==0.7.2
    cryptography==39.0.2
    docutils==0.19
    Fiona==1.9.1
    h3==3.7.6
    idna==3.4
    importlib-metadata==6.0.0
    importlib-resources==5.12.0
    jaraco.classes==3.2.3
    jeepney==0.8.0
    Jinja2==3.1.2
    keyring==23.13.1
    markdown-it-py==2.2.0
    MarkupSafe==2.1.2
    mdurl==0.1.2
    more-itertools==9.1.0
    munch==2.5.0
    numpy==1.24.2
    packaging==23.0
    pandas==1.5.3
    pkginfo==1.9.6
    pycparser==2.21
    Pygments==2.14.0
    pyproj==3.4.1
    python-dateutil==2.8.2
    pytz==2022.7.1
    readme-renderer==37.3
    requests==2.28.2
    requests-toolbelt==0.10.1
    rfc3986==2.0.0
    rich==13.3.2
    Rtree==1.0.1
    SecretStorage==3.3.3
    shapely==2.0.1
    six==1.16.0
    twine==4.0.2
    typer==0.7.0
    typing-extensions==4.5.0
    urllib3==1.26.14
    webencodings==0.5.1
    zipp==3.15.0
    folium==0.14.0
    geopandas==0.12.2
